--- a/coursera_project/RLMS.Rmd
+++ b/coursera_project/RLMS.Rmd
@@ -1,11 +1,12 @@
 ---
 title: "RLMS"
-author: "Ляпина Екатерина"
+author: "Р›СЏРїРёРЅР° Р•РєР°С‚РµСЂРёРЅР°"
 date: "Wednesday, April 15, 2015"
 output: html_document
 ---
 ```{r, echo=FALSE, include=FALSE}
-library("rlms") # загрузка данных в формате rlms (spss)
+#devtools:: install_github("bdemeshev/rlms")
+library("rlms") # Р·Р°РіСЂСѓР·РєР° РґР°РЅРЅС‹С… РІ С„РѕСЂРјР°С‚Рµ rlms (spss)
 library(plyr)
 library("knitr")
 library("xtable")
@@ -23,23 +24,23 @@ h <- rename(h, c(rj13.2="payroll", rh6 = "birth", r_int_y = "age", rh5 = "sex", 
 h$age <- h$age - h$birth
 h$birth <- NULL
 
-saveRDS(h, file = "r22i_os25a.RDS") # сохраняем всё ценное в файл
-h <- readRDS("r22i_os25a.RDS") # читаем из файла что там есть
+saveRDS(h, file = "r22i_os25a.RDS") # СЃРѕС…СЂР°РЅСЏРµРј РІСЃС‘ С†РµРЅРЅРѕРµ РІ С„Р°Р№Р»
+h <- readRDS("r22i_os25a.RDS") # С‡РёС‚Р°РµРј РёР· С„Р°Р№Р»Р° С‡С‚Рѕ С‚Р°Рј РµСЃС‚СЊ
 
-for (i in 1:nrow(h)) h[i,7]  = ifelse((h[i,4]=="окончил 0 - 6 классов") || (h[i,5]=="незаконч среднее образование (7 - 8 кл)")|| (h[i,5]=="незаконч среднее образование (7 - 8 кл) + что-то еще"), 1, 0)
-for (i in 1:nrow(h)) h[i,8]  = ifelse(h[i,4]=="законч среднее образование", 1, 0)
-for (i in 1:nrow(h)) h[i,9]  = ifelse(h[i,4]=="законч среднее специальное образование", 1, 0)
-for (i in 1:nrow(h)) h[i,10]  = ifelse(h[i,4]=="законч высшее образование и выше", 1, 0)
+for (i in 1:nrow(h)) h[i,7]  = ifelse((h[i,4]=="РѕРєРѕРЅС‡РёР» 0 - 6 РєР»Р°СЃСЃРѕРІ") || (h[i,5]=="РЅРµР·Р°РєРѕРЅС‡ СЃСЂРµРґРЅРµРµ РѕР±СЂР°Р·РѕРІР°РЅРёРµ (7 - 8 РєР»)")|| (h[i,5]=="РЅРµР·Р°РєРѕРЅС‡ СЃСЂРµРґРЅРµРµ РѕР±СЂР°Р·РѕРІР°РЅРёРµ (7 - 8 РєР») + С‡С‚Рѕ-С‚Рѕ РµС‰Рµ"), 1, 0)
+for (i in 1:nrow(h)) h[i,8]  = ifelse(h[i,4]=="Р·Р°РєРѕРЅС‡ СЃСЂРµРґРЅРµРµ РѕР±СЂР°Р·РѕРІР°РЅРёРµ", 1, 0)
+for (i in 1:nrow(h)) h[i,9]  = ifelse(h[i,4]=="Р·Р°РєРѕРЅС‡ СЃСЂРµРґРЅРµРµ СЃРїРµС†РёР°Р»СЊРЅРѕРµ РѕР±СЂР°Р·РѕРІР°РЅРёРµ", 1, 0)
+for (i in 1:nrow(h)) h[i,10]  = ifelse(h[i,4]=="Р·Р°РєРѕРЅС‡ РІС‹СЃС€РµРµ РѕР±СЂР°Р·РѕРІР°РЅРёРµ Рё РІС‹С€Рµ", 1, 0)
 h <- rename(h, c(V7 ="ed_1", V8= "ed_2", V9 = "ed_3",  V10 = "ed_4"))
 
-for (i in 1:nrow(h)) h[i,11]  = ifelse(h[i,5]=="областной центр ", 1, 0)
-for (i in 1:nrow(h)) h[i,12]  = ifelse(h[i,5]=="город", 1, 0)
-for (i in 1:nrow(h)) h[i,13]  = ifelse(h[i,5]=="ПГТ", 1, 0)
-for (i in 1:nrow(h)) h[i,14]  = ifelse(h[i,5]=="село", 1, 0)
+for (i in 1:nrow(h)) h[i,11]  = ifelse(h[i,5]=="РѕР±Р»Р°СЃС‚РЅРѕР№ С†РµРЅС‚СЂ ", 1, 0)
+for (i in 1:nrow(h)) h[i,12]  = ifelse(h[i,5]=="РіРѕСЂРѕРґ", 1, 0)
+for (i in 1:nrow(h)) h[i,13]  = ifelse(h[i,5]=="РџР“Рў", 1, 0)
+for (i in 1:nrow(h)) h[i,14]  = ifelse(h[i,5]=="СЃРµР»Рѕ", 1, 0)
 h <- rename(h, c(V11 = "st_1", V12 = "st_2", V13 = "st_3",  V14 = "st_4"))
 
-for (i in 1:nrow(h)) h[i,15]  = ifelse(h[i,3]=="МУЖСКОЙ", 1, 0)
-for (i in 1:nrow(h)) h[i,16]  = ifelse(h[i,3]=="ЖЕНСКИЙ", 1, 0)
+for (i in 1:nrow(h)) h[i,15]  = ifelse(h[i,3]=="РњРЈР–РЎРљРћР™", 1, 0)
+for (i in 1:nrow(h)) h[i,16]  = ifelse(h[i,3]=="Р–Р•РќРЎРљРР™", 1, 0)
 h <- rename(h, c(V15 = "male", V16 = "female"))
 h$status <- NULL
 h$education <- NULL
@@ -47,87 +48,87 @@ h$sex <- NULL
 
 ```
 
-**Объектом исследования** являются данные Российского мониторинга экономического положения и здоровья населения (РМЭЗ, он же RLMS), относящиеся к индивидам.
+**РћР±СЉРµРєС‚РѕРј РёСЃСЃР»РµРґРѕРІР°РЅРёСЏ** СЏРІР»СЏСЋС‚СЃСЏ РґР°РЅРЅС‹Рµ Р РѕСЃСЃРёР№СЃРєРѕРіРѕ РјРѕРЅРёС‚РѕСЂРёРЅРіР° СЌРєРѕРЅРѕРјРёС‡РµСЃРєРѕРіРѕ РїРѕР»РѕР¶РµРЅРёСЏ Рё Р·РґРѕСЂРѕРІСЊСЏ РЅР°СЃРµР»РµРЅРёСЏ (Р РњР­Р—, РѕРЅ Р¶Рµ RLMS), РѕС‚РЅРѕСЃСЏС‰РёРµСЃСЏ Рє РёРЅРґРёРІРёРґР°Рј.
 
 
-**Предметом исследования** выступают причинно-следственные связи и зависимости показателей.
+**РџСЂРµРґРјРµС‚РѕРј РёСЃСЃР»РµРґРѕРІР°РЅРёСЏ** РІС‹СЃС‚СѓРїР°СЋС‚ РїСЂРёС‡РёРЅРЅРѕ-СЃР»РµРґСЃС‚РІРµРЅРЅС‹Рµ СЃРІСЏР·Рё Рё Р·Р°РІРёСЃРёРјРѕСЃС‚Рё РїРѕРєР°Р·Р°С‚РµР»РµР№.
 
 
-**Цель работы:** 
+**Р¦РµР»СЊ СЂР°Р±РѕС‚С‹:** 
 
-Выявление факторов, влияющих на размер заработной платы. Установление структурных связей и закономерностей между элементами исследуемой системы в выбранной предметной области. Последующая интерпретация имеющихся данных, анализ применимости полученных результатов.
-
-
-**Задачи:**
-
-Прохождение этапов извлечения, очистки и трансформации сырых данных.
-Практическая задача сводится к необходимости выявления, в какой степени какие факторы влияют на размер заработной платы и почему.
+Р’С‹СЏРІР»РµРЅРёРµ С„Р°РєС‚РѕСЂРѕРІ, РІР»РёСЏСЋС‰РёС… РЅР° СЂР°Р·РјРµСЂ Р·Р°СЂР°Р±РѕС‚РЅРѕР№ РїР»Р°С‚С‹. РЈСЃС‚Р°РЅРѕРІР»РµРЅРёРµ СЃС‚СЂСѓРєС‚СѓСЂРЅС‹С… СЃРІСЏР·РµР№ Рё Р·Р°РєРѕРЅРѕРјРµСЂРЅРѕСЃС‚РµР№ РјРµР¶РґСѓ СЌР»РµРјРµРЅС‚Р°РјРё РёСЃСЃР»РµРґСѓРµРјРѕР№ СЃРёСЃС‚РµРјС‹ РІ РІС‹Р±СЂР°РЅРЅРѕР№ РїСЂРµРґРјРµС‚РЅРѕР№ РѕР±Р»Р°СЃС‚Рё. РџРѕСЃР»РµРґСѓСЋС‰Р°СЏ РёРЅС‚РµСЂРїСЂРµС‚Р°С†РёСЏ РёРјРµСЋС‰РёС…СЃСЏ РґР°РЅРЅС‹С…, Р°РЅР°Р»РёР· РїСЂРёРјРµРЅРёРјРѕСЃС‚Рё РїРѕР»СѓС‡РµРЅРЅС‹С… СЂРµР·СѓР»СЊС‚Р°С‚РѕРІ.
 
 
-#Описание данных:
+**Р—Р°РґР°С‡Рё:**
 
-В нашем итоговом наборе данных `r nrow(h)` наблюдений. Исходный файл с данными в формате sav.
-
-
-###Описание исходных переменных:
-
-- **rj13.2**   : Заработная плата на основе опроса.
-- **rh6**      : Год рождения респондента.
-- **r_int_y**  : Год проведения опроса.
-- **rh5**      : Пол (создано 2 фиктивные переменные).
-- **r_diplom** : Образование (создано 4 фиктивные переменные).
-- **status**   : Тип населенного пункта - размер населенного пункта может влиять положительно на средний уровень зарплат в нем (создано 4 фиктивные переменные).
-- **rj161.3y** : Трудовой стаж в годах на момент опроса (стаж может влиять на заработную плату положительно).
+РџСЂРѕС…РѕР¶РґРµРЅРёРµ СЌС‚Р°РїРѕРІ РёР·РІР»РµС‡РµРЅРёСЏ, РѕС‡РёСЃС‚РєРё Рё С‚СЂР°РЅСЃС„РѕСЂРјР°С†РёРё СЃС‹СЂС‹С… РґР°РЅРЅС‹С….
+РџСЂР°РєС‚РёС‡РµСЃРєР°СЏ Р·Р°РґР°С‡Р° СЃРІРѕРґРёС‚СЃСЏ Рє РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚Рё РІС‹СЏРІР»РµРЅРёСЏ, РІ РєР°РєРѕР№ СЃС‚РµРїРµРЅРё РєР°РєРёРµ С„Р°РєС‚РѕСЂС‹ РІР»РёСЏСЋС‚ РЅР° СЂР°Р·РјРµСЂ Р·Р°СЂР°Р±РѕС‚РЅРѕР№ РїР»Р°С‚С‹ Рё РїРѕС‡РµРјСѓ.
 
 
+#РћРїРёСЃР°РЅРёРµ РґР°РЅРЅС‹С…:
 
-После преобразования Стало 12 переменных: payroll, age, sex, experience, ed_1, ed_2, ed_3, ed_4, st_1, st_2, st_3, st_4
+Р’ РЅР°С€РµРј РёС‚РѕРіРѕРІРѕРј РЅР°Р±РѕСЂРµ РґР°РЅРЅС‹С… `r nrow(h)` РЅР°Р±Р»СЋРґРµРЅРёР№. РСЃС…РѕРґРЅС‹Р№ С„Р°Р№Р» СЃ РґР°РЅРЅС‹РјРё РІ С„РѕСЂРјР°С‚Рµ sav.
 
-Описательная статистика по нашим переменным:
+
+###РћРїРёСЃР°РЅРёРµ РёСЃС…РѕРґРЅС‹С… РїРµСЂРµРјРµРЅРЅС‹С…:
+
+- **rj13.2**   : Р—Р°СЂР°Р±РѕС‚РЅР°СЏ РїР»Р°С‚Р° РЅР° РѕСЃРЅРѕРІРµ РѕРїСЂРѕСЃР°.
+- **rh6**      : Р“РѕРґ СЂРѕР¶РґРµРЅРёСЏ СЂРµСЃРїРѕРЅРґРµРЅС‚Р°.
+- **r_int_y**  : Р“РѕРґ РїСЂРѕРІРµРґРµРЅРёСЏ РѕРїСЂРѕСЃР°.
+- **rh5**      : РџРѕР» (СЃРѕР·РґР°РЅРѕ 2 С„РёРєС‚РёРІРЅС‹Рµ РїРµСЂРµРјРµРЅРЅС‹Рµ).
+- **r_diplom** : РћР±СЂР°Р·РѕРІР°РЅРёРµ (СЃРѕР·РґР°РЅРѕ 4 С„РёРєС‚РёРІРЅС‹Рµ РїРµСЂРµРјРµРЅРЅС‹Рµ).
+- **status**   : РўРёРї РЅР°СЃРµР»РµРЅРЅРѕРіРѕ РїСѓРЅРєС‚Р° - СЂР°Р·РјРµСЂ РЅР°СЃРµР»РµРЅРЅРѕРіРѕ РїСѓРЅРєС‚Р° РјРѕР¶РµС‚ РІР»РёСЏС‚СЊ РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕ РЅР° СЃСЂРµРґРЅРёР№ СѓСЂРѕРІРµРЅСЊ Р·Р°СЂРїР»Р°С‚ РІ РЅРµРј (СЃРѕР·РґР°РЅРѕ 4 С„РёРєС‚РёРІРЅС‹Рµ РїРµСЂРµРјРµРЅРЅС‹Рµ).
+- **rj161.3y** : РўСЂСѓРґРѕРІРѕР№ СЃС‚Р°Р¶ РІ РіРѕРґР°С… РЅР° РјРѕРјРµРЅС‚ РѕРїСЂРѕСЃР° (СЃС‚Р°Р¶ РјРѕР¶РµС‚ РІР»РёСЏС‚СЊ РЅР° Р·Р°СЂР°Р±РѕС‚РЅСѓСЋ РїР»Р°С‚Сѓ РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕ).
+
+
+
+РџРѕСЃР»Рµ РїСЂРµРѕР±СЂР°Р·РѕРІР°РЅРёСЏ РЎС‚Р°Р»Рѕ 12 РїРµСЂРµРјРµРЅРЅС‹С…: payroll, age, sex, experience, ed_1, ed_2, ed_3, ed_4, st_1, st_2, st_3, st_4
+
+РћРїРёСЃР°С‚РµР»СЊРЅР°СЏ СЃС‚Р°С‚РёСЃС‚РёРєР° РїРѕ РЅР°С€РёРј РїРµСЂРµРјРµРЅРЅС‹Рј:
 ```{r, results='asis'}
 knitr::kable(summary(h))
 ```
 
-Стандартное отклонение по количественным переменным:
+РЎС‚Р°РЅРґР°СЂС‚РЅРѕРµ РѕС‚РєР»РѕРЅРµРЅРёРµ РїРѕ РєРѕР»РёС‡РµСЃС‚РІРµРЅРЅС‹Рј РїРµСЂРµРјРµРЅРЅС‹Рј:
 - **payroll**    : `r sd(h$payroll)`
 - **age**        : `r sd(h$age)`
 - **experience**: `r sd(h$experience)`
 
 
-Построим гистограмму переменной payroll (доход):
+РџРѕСЃС‚СЂРѕРёРј РіРёСЃС‚РѕРіСЂР°РјРјСѓ РїРµСЂРµРјРµРЅРЅРѕР№ payroll (РґРѕС…РѕРґ):
 ```{r}
-ggplot(h, aes(x=h$payroll)) + geom_histogram(binwidth=.03, fill="white", colour="black")
+hist(h$payroll, right=FALSE, xlab="Р—Р°СЂРїР»Р°С‚Р°", ylab="Р§Р°СЃС‚РѕС‚Р°", main="Р“РёСЃС‚РѕРіСЂР°РјРјР° РїРѕ Р·Р°СЂРїР»Р°С‚Рµ")
 ```
 
-Построим гистограмму переменной age (возраст):
+РџРѕСЃС‚СЂРѕРёРј РіРёСЃС‚РѕРіСЂР°РјРјСѓ РїРµСЂРµРјРµРЅРЅРѕР№ age (РІРѕР·СЂР°СЃС‚):
 ```{r}
-ggplot(h, aes(x=h$payroll)) + geom_histogram(binwidth=.03, fill="white", colour="black")
+hist(h$age, right=FALSE, xlab="Р’РѕР·СЂР°СЃС‚", ylab="Р§Р°СЃС‚РѕС‚Р°", main="Р“РёСЃС‚РѕРіСЂР°РјРјР° РїРѕ РІРѕР·СЂР°СЃС‚Сѓ РёРЅРґРёРІРёРґРѕРІ")
 ```
 
 
 
-Построим простую линейную регрессию заработной платы на возраст (**age**), пол (по фиктивной перменной **male**), 3 фиктивные переменные на образование (за базовую категорию возьмем самый низкий уровень образования: **ed_2**, **ed_3**, **ed_4**), 3 фиктивные переменные на тип населенного пунта (за базовую возьмем первую переменную: **st_2**, **st_3**, **st_4**) и стаж работы (**experience**). Основные характеристики модели:
+РџРѕСЃС‚СЂРѕРёРј РїСЂРѕСЃС‚СѓСЋ Р»РёРЅРµР№РЅСѓСЋ СЂРµРіСЂРµСЃСЃРёСЋ Р·Р°СЂР°Р±РѕС‚РЅРѕР№ РїР»Р°С‚С‹ РЅР° РІРѕР·СЂР°СЃС‚ (**age**), РїРѕР» (РїРѕ С„РёРєС‚РёРІРЅРѕР№ РїРµСЂРјРµРЅРЅРѕР№ **male**), 3 С„РёРєС‚РёРІРЅС‹Рµ РїРµСЂРµРјРµРЅРЅС‹Рµ РЅР° РѕР±СЂР°Р·РѕРІР°РЅРёРµ (Р·Р° Р±Р°Р·РѕРІСѓСЋ РєР°С‚РµРіРѕСЂРёСЋ РІРѕР·СЊРјРµРј СЃР°РјС‹Р№ РЅРёР·РєРёР№ СѓСЂРѕРІРµРЅСЊ РѕР±СЂР°Р·РѕРІР°РЅРёСЏ: **ed_2**, **ed_3**, **ed_4**), 3 С„РёРєС‚РёРІРЅС‹Рµ РїРµСЂРµРјРµРЅРЅС‹Рµ РЅР° С‚РёРї РЅР°СЃРµР»РµРЅРЅРѕРіРѕ РїСѓРЅС‚Р° (Р·Р° Р±Р°Р·РѕРІСѓСЋ РІРѕР·СЊРјРµРј РїРµСЂРІСѓСЋ РїРµСЂРµРјРµРЅРЅСѓСЋ: **st_2**, **st_3**, **st_4**) Рё СЃС‚Р°Р¶ СЂР°Р±РѕС‚С‹ (**experience**). РћСЃРЅРѕРІРЅС‹Рµ С…Р°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё РјРѕРґРµР»Рё:
 
 ```{r}
 model <- lm(payroll ~ age + male + ed_2 + ed_3 + ed_4 + st_2  + st_3  + st_4 + experience, data=h)
 summary(model)
 ```
 
-В нашем случае оказалось, что **все** переменные значимы на 5% уровне значимости, мы уверены в том, что свободные члены в нашем выражении отличны от нуля. Так как p-value намного меньше 0.05, мы отвергаем нулевую гипотезу о том, что коэффициенты ?? = 0. Следовательно, есть сильная связь между переменными в модели с нашей прогнозируемой переменной.
-Вышло, что возраст отрицательно связан с размером заработной платы (возможно потому, что с возрастом человек менее трудоспособен).
-В общем случае, образование положительно влияет на размер заработной платы, как и стаж работы, а проживание не в городе отрицательно влияет на уровень заработной платы, что также вполне объяснимо.
+Р’ РЅР°С€РµРј СЃР»СѓС‡Р°Рµ РѕРєР°Р·Р°Р»РѕСЃСЊ, С‡С‚Рѕ **РІСЃРµ** РїРµСЂРµРјРµРЅРЅС‹Рµ Р·РЅР°С‡РёРјС‹ РЅР° 5% СѓСЂРѕРІРЅРµ Р·РЅР°С‡РёРјРѕСЃС‚Рё, РјС‹ СѓРІРµСЂРµРЅС‹ РІ С‚РѕРј, С‡С‚Рѕ СЃРІРѕР±РѕРґРЅС‹Рµ С‡Р»РµРЅС‹ РІ РЅР°С€РµРј РІС‹СЂР°Р¶РµРЅРёРё РѕС‚Р»РёС‡РЅС‹ РѕС‚ РЅСѓР»СЏ. РўР°Рє РєР°Рє p-value РЅР°РјРЅРѕРіРѕ РјРµРЅСЊС€Рµ 0.05, РјС‹ РѕС‚РІРµСЂРіР°РµРј РЅСѓР»РµРІСѓСЋ РіРёРїРѕС‚РµР·Сѓ Рѕ С‚РѕРј, С‡С‚Рѕ РєРѕСЌС„С„РёС†РёРµРЅС‚С‹ ?? = 0. РЎР»РµРґРѕРІР°С‚РµР»СЊРЅРѕ, РµСЃС‚СЊ СЃРёР»СЊРЅР°СЏ СЃРІСЏР·СЊ РјРµР¶РґСѓ РїРµСЂРµРјРµРЅРЅС‹РјРё РІ РјРѕРґРµР»Рё СЃ РЅР°С€РµР№ РїСЂРѕРіРЅРѕР·РёСЂСѓРµРјРѕР№ РїРµСЂРµРјРµРЅРЅРѕР№.
+Р’С‹С€Р»Рѕ, С‡С‚Рѕ РІРѕР·СЂР°СЃС‚ РѕС‚СЂРёС†Р°С‚РµР»СЊРЅРѕ СЃРІСЏР·Р°РЅ СЃ СЂР°Р·РјРµСЂРѕРј Р·Р°СЂР°Р±РѕС‚РЅРѕР№ РїР»Р°С‚С‹ (РІРѕР·РјРѕР¶РЅРѕ РїРѕС‚РѕРјСѓ, С‡С‚Рѕ СЃ РІРѕР·СЂР°СЃС‚РѕРј С‡РµР»РѕРІРµРє РјРµРЅРµРµ С‚СЂСѓРґРѕСЃРїРѕСЃРѕР±РµРЅ).
+Р’ РѕР±С‰РµРј СЃР»СѓС‡Р°Рµ, РѕР±СЂР°Р·РѕРІР°РЅРёРµ РїРѕР»РѕР¶РёС‚РµР»СЊРЅРѕ РІР»РёСЏРµС‚ РЅР° СЂР°Р·РјРµСЂ Р·Р°СЂР°Р±РѕС‚РЅРѕР№ РїР»Р°С‚С‹, РєР°Рє Рё СЃС‚Р°Р¶ СЂР°Р±РѕС‚С‹, Р° РїСЂРѕР¶РёРІР°РЅРёРµ РЅРµ РІ РіРѕСЂРѕРґРµ РѕС‚СЂРёС†Р°С‚РµР»СЊРЅРѕ РІР»РёСЏРµС‚ РЅР° СѓСЂРѕРІРµРЅСЊ Р·Р°СЂР°Р±РѕС‚РЅРѕР№ РїР»Р°С‚С‹, С‡С‚Рѕ С‚Р°РєР¶Рµ РІРїРѕР»РЅРµ РѕР±СЉСЏСЃРЅРёРјРѕ.
 
 
 
 
-Построим простую линейную регрессию с робастными ошибками заработной платы на возраст (**age**), пол (по фиктивной перменной **male**), 3 фиктивные переменные на образование (за базовую категорию возьмем самый низкий уровень образования: **ed_2**, **ed_3**, **ed_4**), 3 фиктивные переменные на тип населенного пунта (за базовую возьмем первую переменную: **st_2**, **st_3**, **st_4**) и стаж работы (**experience**). Основные характеристики модели:
+РџРѕСЃС‚СЂРѕРёРј РїСЂРѕСЃС‚СѓСЋ Р»РёРЅРµР№РЅСѓСЋ СЂРµРіСЂРµСЃСЃРёСЋ СЃ СЂРѕР±Р°СЃС‚РЅС‹РјРё РѕС€РёР±РєР°РјРё Р·Р°СЂР°Р±РѕС‚РЅРѕР№ РїР»Р°С‚С‹ РЅР° РІРѕР·СЂР°СЃС‚ (**age**), РїРѕР» (РїРѕ С„РёРєС‚РёРІРЅРѕР№ РїРµСЂРјРµРЅРЅРѕР№ **male**), 3 С„РёРєС‚РёРІРЅС‹Рµ РїРµСЂРµРјРµРЅРЅС‹Рµ РЅР° РѕР±СЂР°Р·РѕРІР°РЅРёРµ (Р·Р° Р±Р°Р·РѕРІСѓСЋ РєР°С‚РµРіРѕСЂРёСЋ РІРѕР·СЊРјРµРј СЃР°РјС‹Р№ РЅРёР·РєРёР№ СѓСЂРѕРІРµРЅСЊ РѕР±СЂР°Р·РѕРІР°РЅРёСЏ: **ed_2**, **ed_3**, **ed_4**), 3 С„РёРєС‚РёРІРЅС‹Рµ РїРµСЂРµРјРµРЅРЅС‹Рµ РЅР° С‚РёРї РЅР°СЃРµР»РµРЅРЅРѕРіРѕ РїСѓРЅС‚Р° (Р·Р° Р±Р°Р·РѕРІСѓСЋ РІРѕР·СЊРјРµРј РїРµСЂРІСѓСЋ РїРµСЂРµРјРµРЅРЅСѓСЋ: **st_2**, **st_3**, **st_4**) Рё СЃС‚Р°Р¶ СЂР°Р±РѕС‚С‹ (**experience**). РћСЃРЅРѕРІРЅС‹Рµ С…Р°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё РјРѕРґРµР»Рё:
 
 ```{r}
 model2 <- rlm(payroll ~ age + male + ed_2 + ed_3 + ed_4 + st_2  + st_3  + st_4 + experience, data=h) 
 summary(model2)
 ```
 
-В этой модели все переменные также остались значимыми на 5% уровне значимости. Знаки не изменились, коэффициенты немного скорректировались. Такая ситуация могла получиться из-за использования робастных ошибкок. Можно заметить, что с уменьшением значения разброса, значение веса для наблюдения увеличивается. Другими словами, наблюдения с большими по значению остатками, обозначаются как маловажные. Например, данный вывод показывает нам что наблюдением под номером 13281 будет меньше всех остальных принято во внимание. Если сравнивать робастную регрессию с обычной линейной, то в линейной регрессии все наблюдения учитываются с весом равном 1. Таким образом, чем больше наблюдений с весом равным 1 в робастной регрессии, тем больше она приближается к виду классической линейной регрессии.
+Р’ СЌС‚РѕР№ РјРѕРґРµР»Рё РІСЃРµ РїРµСЂРµРјРµРЅРЅС‹Рµ С‚Р°РєР¶Рµ РѕСЃС‚Р°Р»РёСЃСЊ Р·РЅР°С‡РёРјС‹РјРё РЅР° 5% СѓСЂРѕРІРЅРµ Р·РЅР°С‡РёРјРѕСЃС‚Рё. Р—РЅР°РєРё РЅРµ РёР·РјРµРЅРёР»РёСЃСЊ, РєРѕСЌС„С„РёС†РёРµРЅС‚С‹ РЅРµРјРЅРѕРіРѕ СЃРєРѕСЂСЂРµРєС‚РёСЂРѕРІР°Р»РёСЃСЊ. РўР°РєР°СЏ СЃРёС‚СѓР°С†РёСЏ РјРѕРіР»Р° РїРѕР»СѓС‡РёС‚СЊСЃСЏ РёР·-Р·Р° РёСЃРїРѕР»СЊР·РѕРІР°РЅРёСЏ СЂРѕР±Р°СЃС‚РЅС‹С… РѕС€РёР±РєРѕРє. РњРѕР¶РЅРѕ Р·Р°РјРµС‚РёС‚СЊ, С‡С‚Рѕ СЃ СѓРјРµРЅСЊС€РµРЅРёРµРј Р·РЅР°С‡РµРЅРёСЏ СЂР°Р·Р±СЂРѕСЃР°, Р·РЅР°С‡РµРЅРёРµ РІРµСЃР° РґР»СЏ РЅР°Р±Р»СЋРґРµРЅРёСЏ СѓРІРµР»РёС‡РёРІР°РµС‚СЃСЏ. Р”СЂСѓРіРёРјРё СЃР»РѕРІР°РјРё, РЅР°Р±Р»СЋРґРµРЅРёСЏ СЃ Р±РѕР»СЊС€РёРјРё РїРѕ Р·РЅР°С‡РµРЅРёСЋ РѕСЃС‚Р°С‚РєР°РјРё, РѕР±РѕР·РЅР°С‡Р°СЋС‚СЃСЏ РєР°Рє РјР°Р»РѕРІР°Р¶РЅС‹Рµ. РќР°РїСЂРёРјРµСЂ, РґР°РЅРЅС‹Р№ РІС‹РІРѕРґ РїРѕРєР°Р·С‹РІР°РµС‚ РЅР°Рј С‡С‚Рѕ РЅР°Р±Р»СЋРґРµРЅРёРµРј РїРѕРґ РЅРѕРјРµСЂРѕРј 13281 Р±СѓРґРµС‚ РјРµРЅСЊС€Рµ РІСЃРµС… РѕСЃС‚Р°Р»СЊРЅС‹С… РїСЂРёРЅСЏС‚Рѕ РІРѕ РІРЅРёРјР°РЅРёРµ. Р•СЃР»Рё СЃСЂР°РІРЅРёРІР°С‚СЊ СЂРѕР±Р°СЃС‚РЅСѓСЋ СЂРµРіСЂРµСЃСЃРёСЋ СЃ РѕР±С‹С‡РЅРѕР№ Р»РёРЅРµР№РЅРѕР№, С‚Рѕ РІ Р»РёРЅРµР№РЅРѕР№ СЂРµРіСЂРµСЃСЃРёРё РІСЃРµ РЅР°Р±Р»СЋРґРµРЅРёСЏ СѓС‡РёС‚С‹РІР°СЋС‚СЃСЏ СЃ РІРµСЃРѕРј СЂР°РІРЅРѕРј 1. РўР°РєРёРј РѕР±СЂР°Р·РѕРј, С‡РµРј Р±РѕР»СЊС€Рµ РЅР°Р±Р»СЋРґРµРЅРёР№ СЃ РІРµСЃРѕРј СЂР°РІРЅС‹Рј 1 РІ СЂРѕР±Р°СЃС‚РЅРѕР№ СЂРµРіСЂРµСЃСЃРёРё, С‚РµРј Р±РѕР»СЊС€Рµ РѕРЅР° РїСЂРёР±Р»РёР¶Р°РµС‚СЃСЏ Рє РІРёРґСѓ РєР»Р°СЃСЃРёС‡РµСЃРєРѕР№ Р»РёРЅРµР№РЅРѕР№ СЂРµРіСЂРµСЃСЃРёРё.
 
 
 
