--- a/trading/trading_oracle_nasdaq.Rmd
+++ b/trading/trading_oracle_nasdaq.Rmd
@@ -1,4 +1,4 @@
----
+﻿---
 author: "Ляпина Екатерина"
 date: "Monday, March 30, 2015"
 ---
@@ -10,12 +10,13 @@ date: "Monday, March 30, 2015"
 Для анализа были взяты следующие данные. таймфрейм - 10 лет: 
 http://www.nasdaq.com/symbol/orcl/historical
 
-```{r, fig.align='center', echo=FALSE}
+```{r, fig.align='center', echo=FALSE, message=FALSE, warning=FALSE}
 library(png)
 library(grid)
 img <- readPNG('nasdaq_small.png')
 grid.raster(img)
 ```
+
 ```{r, include=FALSE}
 Sys.setenv(LANG = "en")
 #install.packages("quantmod", dependencies=TRUE)
@@ -71,7 +72,7 @@ rm(Quotes1)
 - **close** : цена на момент закрытия торгов.
 - **volume** : количество акций, которые обращались на бирже в день записи, оьъем торгов.
 - **open** : цена на момент открытия торгов.
-- **hight** : самая высокая цены за акцию за день.
+- **high** : самая высокая цены за акцию за день.
 - **low** : самая низкая цены за акцию за день.
 
 Описательная статистика по нашей выбоке:
@@ -281,7 +282,7 @@ legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 - Нет комиссий биржи
 - Сигнал на покупку: когда быстрая (EMA-S) обгоняет медленную (EMA-L) - розовая область графика переходит в зеленую
 - Сигнал на продажу: когда медленная (EMA-L) обгоняет быструю (EMA-S) - зеленая область графика переходит в розовую
-- На начало переиода у нас `r Quotes[1, 2]*500` долларов
+- На начало периода у нас `r Quotes[1, 2]*500` долларов
 
 ```{r, include=FALSE, echo=FALSE}
 #imitation game
@@ -430,6 +431,7 @@ legend("topleft", c("EMA-S", "EMA-L"), col=c("red", "orange"), lwd=2)
 # 
 ```
 
+
 ```{r, fig.align='center', echo=FALSE}
 img <- readPNG('sort.png')
 grid.raster(img)
@@ -439,7 +441,89 @@ grid.raster(img)
 Используем самую выгодную стратегию: комбинацию SMA-S с окном усреднения 10 и SMA-L с окном усреднения 29. Добавим ряд условий (также продолжаем торговать на всю сумму, хотя это и не самое лучшее решение):
 
 - Допускается возможность севершения сделки "с плечом" (1:2), то есть у нас будет в 2 раза больше средств на совершение каждой сделки
-- Допускается возможность совершения "коротких" сделок (продаж без покрытия) на заумные акции в том же количестве также 1:2
+- Допускается возможность совершения "коротких" сделок (продаж без покрытия) на акции в том же количестве (плечо 1:2)
+- Пусть комиссия за пользование кредитом составляет 0,08% за сделку
+- Сделки совершаются в следующий момент времени, после завершения сигнала
+- Допускается покупка только целого числа финансового актива
 
-- Пусть комиссия за пользование кредитом составляет 0,08% за сделку 
+```{r, echo=FALSE, fig.align='center'}
+# сделки с плечом и короткие сделки
+Quotes_new <- subset(Quotes, select = c("date", "close",  "open", "high",  "low"))
+for (i in 10:nrow(Quotes_new)) Quotes_new[i,6] <- mean(Quotes_new[(i-9):i,2])
+colnames(Quotes_new)[6] <- "SMAS 10"
+for (i in 29:nrow(Quotes)) Quotes_new[i,7] <- mean(Quotes_new[(i-28):i,2])
+initx <- 29
+colnames(Quotes_new)[7] <- "SMAL 29"
+plot(Quotes_new[1:300,2], type="l", lwd=2, col="red", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE (лучшая стратегия)", ylim=c(10,16) )
+lines(Quotes_new[1:300,6], type="l", lwd=2, col="blue", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE (лучшая стратегия)" )
+lines(Quotes_new[1:300,7], type="l", lwd=2, col="orange", xlab="Наблюдения", ylab="Цена закрытия", main="Акции компании ORACLE (лучшая стратегия)" )
+intersections <- drawSquares(Quotes_new[,6:7], initx, plot = TRUE)
+legend("topleft", c("SMA-S 10", "SMA-L 29"), col=c("blue", "orange"), lwd=4)
+```
+
+
+```{r, include=FALSE, echo=FALSE}
+Quotes_new$budget <- Quotes_new[NROW(Quotes_new),2]*500
+Quotes_new$papers <- 0
+Quotes_new$budget_credit <- 0
+Quotes_new$papers_credit <- 0
+
+сredit <- 0
+stocks <- 0 
+shallBuy <- FALSE
+
+if (Quotes_new[initx,6] < Quotes_new[initx,7]) shallBuy <-TRUE
+for (i in 1:NROW(intersections) )
+{
+  index <- intersections[i]
+  if (shallBuy){
+    
+    price <- Quotes_new[index,2]
+    budget <-  Quotes_new[index,8]
+    papers <- Quotes_new[index,9]
+    budget_credit <- Quotes_new[index,10]
+    papers_credit <- Quotes_new[index,11]
+    
+    
+    papers <- ( 0.9992 * budget * 2 ) %/% price
+    payment <- papers * price * 1.0008
+    budget <- budget - payment/2
+    budget_credit <- budget_credit + payment / 2
+    papers <- papers - papers_credit
+    papers_credit <- 0
+    
+    # вот тут мы покупаем что-то на наши средства
+    Quotes_new[((index+1):(NROW(Quotes_new))),8]<-budget
+    Quotes_new[((index+1):(NROW(Quotes_new))),9]<-papers
+    Quotes_new[((index+1):(NROW(Quotes_new))),10] <- budget_credit
+    Quotes_new[((index+1):(NROW(Quotes_new))),11] <- papers_credit
+    
+    
+    shallBuy <- FALSE
+  }else{
+    price <- Quotes_new[index,2]
+    budget <-  Quotes_new[index,8]
+    papers <- Quotes_new[index,9]
+    budget_credit <- Quotes_new[index,10]
+    papers_credit <- Quotes_new[index,11]
+    
+    papers_credit <- papers_credit + papers
+    budget <- papers * 2 * price * 0.9992 + budget - budget_credit
+    budget_credit <- 0
+    papers <- 0
+    
+    Quotes_new[((index+1):(NROW(Quotes_new))),8]<-budget
+    Quotes_new[((index+1):(NROW(Quotes_new))),9]<-papers
+    Quotes_new[((index+1):(NROW(Quotes_new))),10] <- budget_credit
+    Quotes_new[((index+1):(NROW(Quotes_new))),11] <- papers_credit
+    
+    
+    shallBuy <- TRUE     
+  }  
+}
+Quotes_new$balance <- ( Quotes_new$papers - Quotes_new$papers_credit ) *Quotes_new$close + Quotes_new$budget - Quotes_new$budget_credit
+
+```
+Итого, для смешанной стратегии наша выгода в конце периода составила `r Quotes_new[nrow(Quotes_new),ncol(Quotes_new)]`. Мораль сей басни такова: нужно выставлять stop loss :)
+
 
