--- a/logit_probit/logit_probit.Rmd
+++ b/logit_probit/logit_probit.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "Econometrics_lab"
-author: "Ляпина Екатерина и Гайдаржи Дмитрий"
-date: "Tuesday, April 21, 2015"
 output: html_document
 ---
 
@@ -12,7 +10,7 @@ output: html_document
 Для анализа были взяты следующие данные, предоставленные преподавателем в рамках курса эконометрики в ВШЭ. Загружаем необходимые для исследования пакеты и данные из файла.
 
 
-```{r,fig.align='center'}
+```{r,fig.align='center', message=FALSE, warning=FALSE}
 # Esli russkie bukvi prevratilitis v krakozyabry,
 # to File - Reopen with encoding... - UTF-8 - Set as default - OK
 
@@ -86,7 +84,7 @@ women <- mutate(women,married=as.factor(married),work=as.factor(work))
 knitr::kable(summary(women))
 ```
 
-Также построим пару графиков, для того, чтобы лучше понимать, с чем мы имеем дело: мозаичный график, график-вилончель, "ящик с усами" и 2 варианты сглаженной функции плотности для зависимости занятости от возраста и образования.
+Также построим пару графиков, для того, чтобы лучше понимать, с чем мы имеем дело: мозаичный график, график-виолончель, "ящик с усами" и 2 варианты сглаженной функции плотности для зависимости занятости от возраста и образования.
 
 ```{r}
 # мозаичный график
@@ -126,7 +124,7 @@ summary(m_logit)
 summary(m_probit)
 ```
 
-Все переменные в моделях значимы. В силу масштабирования скрытой переменной коэффициенты в логит модели отличаются от коэффициентов  в пробит модели примерно в 1.6 раза. AIC моеделй одинаков - 2070.4. Мы можем построить ковариационную матрицу оцененных коэффициентов для логит модели:
+Все переменные в моделях значимы. В силу масштабирования скрытой переменной коэффициенты в логит модели отличаются от коэффициентов  в пробит модели примерно в 1.6 раза. AIC моделей одинаков - 2070.4. Мы можем построить ковариационную матрицу оцененных коэффициентов для логит модели:
 ```{r, results='asis'}
 knitr::kable(vcov(m_logit))
 ```
